--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -17,7 +17,7 @@ server {
 
     location ~ \.php$ {
         root           html;
-        fastcgi_pass   php:9000;
+        fastcgi_pass   localhost:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  /var/www/html$fastcgi_script_name;
         include        fastcgi_params;
